fix: font size too small

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,5 +3,5 @@
 @tailwind utilities;
 
 :root {
-  font-size: 10px;
+  font-size: 12px;
 }
